fixed content covering each other

--- a/src/index.css
+++ b/src/index.css
@@ -37,9 +37,12 @@ img:hover{
 }
 
 .Screen{
+  min-height: min-content;
   height: var(--screenHeight);
   padding-top: 2%;
   padding-bottom: 2%;
+  position: relative;
+
 }
 
 #displayingData{
